<?xml version="1.0" encoding="utf-8"?>

<!--

     Nama        : Indi Bagus Prasetyo ;
     NIM         : 10121902 ;
     Kelas       : IF9K ;
     Mata Kuliah : Pemrograman Android ;
     Dosen       : Rizki Adam Kurniawan, M.Kom. ;
     Final       : Senin, 12 Agustus 2024 ;

     -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.uas_ibp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.uas_ibp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.uas_ibp.ui.event.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_event" />
</navigation>